docs/results/baselines/ft-one_shot_no_COT_ucl_code/bk_ex3_23/bk_ex3_23.txt
Error at line 21: Unknown module input/output: phase.
    instance tl : TrafficLight(phase: (red));
                               ^
Parsing failed. 1 errors found.
